5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1593_2908.log
== TEST (2019-03-28 11:50:35) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
l =(a**2 + b**2 +c**2)/(a+b+c)

print(round(, 7))
-- ERROR:
File "XXXX", line 6
    print(round(, 7))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:50:45) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
l =(a**2 + b**2 +c**2)/(a+b+c)

print(round(l, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:50:57) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
l =(a**2 + b**2 +c**2)/(a+b+c)

print(round(l, 7))
-- EXECUTION TIME:
0.152559
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
